Load Mandalorian chapters and Dutch UI text

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Starlit Stories - Interactive Book Framework</title>
+    <title>De Sleutels van Balans - Interactief Kinderboek</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,16 +15,16 @@
   <body>
     <header class="site-header">
       <div class="header-text">
-        <h1>Starlit Stories</h1>
-        <p class="tagline">A ready-to-publish framework for children's chapter books</p>
-        <button id="start-reading" class="primary">Open the Book</button>
+        <h1>De Sleutels van Balans</h1>
+        <p class="tagline">Een interactieve Mandalorian-vertelling in tien hoofdstukken</p>
+        <button id="start-reading" class="primary">Open het boek</button>
       </div>
       <div class="header-illustration" aria-hidden="true"></div>
     </header>
 
     <main>
-      <aside class="toc" aria-label="Table of contents">
-        <h2>Chapters</h2>
+      <aside class="toc" aria-label="Inhoudsopgave">
+        <h2>Hoofdstukken</h2>
         <ol id="chapter-list" class="chapter-list"></ol>
       </aside>
 
@@ -43,17 +43,17 @@
         </article>
 
         <footer class="page-controls">
-          <button id="prev" class="secondary" disabled>Previous</button>
-          <progress id="progress" value="0" max="1" aria-label="Story progress">0%</progress>
-          <button id="next" class="secondary" disabled>Next</button>
+          <button id="prev" class="secondary" disabled>Vorige</button>
+          <progress id="progress" value="0" max="1" aria-label="Voortgang verhaal">0%</progress>
+          <button id="next" class="secondary" disabled>Volgende</button>
         </footer>
       </section>
     </main>
 
     <footer class="site-footer">
       <p>
-        Use the framework to drop in your own manuscript, swap in final illustrations,
-        and publish a polished ten-chapter adventure in minutes.
+        Gebruik dit raamwerk om je eigen verhaaltekst te plaatsen, illustraties te vervangen
+        en binnen enkele minuten een volledige tien hoofdstukken tellende leeservaring te publiceren.
       </p>
     </footer>
 
