Update project branding to De Sleutels van de Melkweg

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>De Sleutels van Balans - Interactief Kinderboek</title>
+    <title>De Sleutels van de Melkweg - Deel I: Grogu en de drie sleutels</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -15,7 +15,7 @@
   <body>
     <header class="site-header">
       <div class="header-text">
-        <h1>De Sleutels van Balans</h1>
+        <h1>De Sleutels van de Melkweg - Deel I: Grogu en de drie sleutels</h1>
         <p class="tagline">Een interactieve Mandalorian-vertelling in tien hoofdstukken</p>
         <button id="start-reading" class="primary">Open het boek</button>
       </div>
